--- a/client/src/components/UI/AuthUI/MediaW1024Plus.scss
+++ b/client/src/components/UI/AuthUI/MediaW1024Plus.scss
@@ -1,40 +1,7 @@
-<template lang="pug">
-div.Auth
-    div.AuthGrid
-        div.AuthGridInputs
-            img(src="@/assets/svg/home-repair-service-round-24px.svg").imgStyle
-            span.spnStyleH1 АВТОРИЗАЦИЯ
-            div.spanFrame
-                span.spnStyleH2 Логин:
-                input.inpStyle
-            div.spanFrame
-                span.spnStyleH2 Пароль:
-                input(type="password").inpStyle.inpPswdStyle
-            div.spanFrameH3
-                span.spnStyleH3 Запомнить меня
-                label(class="switch")
-                  input(type="checkbox")
-                  span(class="slider round")
-            button.AuthButton Войти
-            div.spanFrameH3
-                span.spnStyleH3 Забыл пароль?
-                span.spnStyleH3 Регистрация
-        div.GridGradient
-            span.GradientText Ииииииууууу
-</template>
-
-<script>
-import switchCSS from "@/components/UI/SwitchRound.css"
-    export default {
-        
-    }
-</script>
-
-<style lang="css" scoped>
-/* Для компов */
+$bgGradient: linear-gradient(to right bottom, #948cd9 3.31%, #BD5DAE 94.52%);
 @media (min-width: 1024px){
     .Auth{
-        width: clamp(300px, 80vw, 2000px);
+        width: clamp(300px, 75vw, 2300px);
     }
     .AuthGrid{
         background: white;
@@ -50,18 +17,21 @@ import switchCSS from "@/components/UI/SwitchRound.css"
         height: 100%;
     }
     .GridGradient{
-        background: linear-gradient(to right bottom, #948cd9 3.31%, #BD5DAE 94.52%) ;
+        background: $bgGradient;
         background-repeat: no-repeat;
         /* position: relative; */
-        border-radius: 4vh;
+        border-radius: 3vw;
         height: 95%;
         width: 93%; 
+        display: flex;
+        align-items: center;
+        flex-direction: column;
+        justify-content: center;
     }
     .GradientText{
         display: grid;
         align-items: center;
         justify-items: center;
-        height: 100%;
     }
     .AuthGridInputs{
         display: flex;
@@ -69,33 +39,36 @@ import switchCSS from "@/components/UI/SwitchRound.css"
         align-items: center;
         justify-items: center;
         justify-content: center;
-        width: 72%;
+        width: 62%;
         height: 86%;  
+        gap: 0.5vw;
     }
     .AuthButton{
         grid-column: 1/ span 2;
         grid-row: 4;
         color: white;
-        background: #000 76%;
+        background: rgb(20, 20, 20) 76%;
         border: none;
-        border-radius: 0.5vw;
+        border-radius: 1vw;
         width: 10vw;
-        aspect-ratio: 16/7;
+        aspect-ratio: 16/6;
         font-family: "Cera Pro Bold";
         font-size: clamp(10px, 2vw, 40px);
         text-align: center;
+        -webkit-transition: .4s;
+        transition: .4s;
     }
     .spnStyleH2{
         font-family: "Cera Pro Medium";
-        font-size: 1.7vw;
+        font-size: 1.4vw;
         text-align: end;
-        margin: 1vw;
+        margin: 0.1vw;
     }
     .spnStyleH1{
         font-family: "Cera Pro Bold";
         font-size: 2.7vw;
         text-align: end;
-        margin: 1vw;
+        margin-bottom: 1vw;
     }
     .spnStyleH3{
         font-family: "Cera Pro";
@@ -104,13 +77,13 @@ import switchCSS from "@/components/UI/SwitchRound.css"
         margin: 1vw;
     }
     .inpStyle{
-        width: clamp(180px, 19vw, 600px);
-        height: clamp(31px, 2.7vw, 500px);
+        width: clamp(160px, 15vw, 500px);
+        height: clamp(31px, 2.7vw, 200px);
         font-family: "Cera Pro";
-        font-size: 1.8vw;
+        font-size: 1.2vw;
         border-radius: 0.5vw;
         background: rgba(196, 191, 191, 0.28);
-        box-shadow: inset 0px 0px 4px 2px rgba(0, 0, 0, 0.25);
+        box-shadow: inset 0px 0px 0.08vw 0.08vw rgba(0, 0, 0, 0.25);
         border: white;
         color: black;
         justify-self: center;
@@ -123,10 +96,14 @@ import switchCSS from "@/components/UI/SwitchRound.css"
         width: 7vw;
         aspect-ratio: 1/1;
     }
+    .imgStyleGradient{
+        aspect-ratio: 1/1;
+        width: 14vw;
+    }
     .spanFrame{
         width: 100%;
         display: grid;
-        grid-template-columns: 28% 72%;
+        grid-template-columns: 25% 75%;
         align-items: center;
         margin-top: 2%;
         margin-bottom: 2%;
@@ -134,6 +111,7 @@ import switchCSS from "@/components/UI/SwitchRound.css"
     .spanFrameH3{
         display: flex;
         align-items: center;
+        margin: 1vw;
+        gap: 1vw;
     }
 }
-</style>
