--- a/client/src/components/UI/AuthUI/MediaW1024Plus.scss
+++ b/client/src/components/UI/AuthUI/MediaW1024Plus.scss
@@ -1,7 +1,7 @@
 $bgGradient: linear-gradient(to right bottom, #948cd9 3.31%, #BD5DAE 94.52%);
 @media (min-width: 1024px){
     .Auth{
-        width: clamp(300px, 75vw, 2300px);
+        width: clamp(300px, 85vw, 1920px);;
     }
     .AuthGrid{
         background: white;
